# rccm-permutation-finder

./: .gitignore  README.md
version-1/: CMakeCache.txt  CMakeLists.txt  MCM_Permutatation.cbp  Makefile  cmake_install.cmake  coeff_generation_anaysis.ods  result_001.txt  result_max_3.txt
version-1/inc/: mcm_permutation.h  permutator.h  structure.h  structures.h
version-1/pro/: MCM_Permutation.pro
version-1/results/max_shift_03/: result_max_3_1B.txt  result_max_3_1B2E.txt  result_max_3_1B2E_run2.txt  result_max_3_1E.txt
version-1/results/max_shift_03/New_bug_free_distribution/: 1BB_2B_3E.txt  1BB_2E.txt  1B_2E.txt
version-1/src/: main.cpp  mcm_permutation.cpp  permutator.cpp  structure.cpp
version-2/: CMakeLists.txt
version-2/inc/: base_obj.h  calc_base.h  calc_rccm_1add.h  calc_rccm_C1.h  calc_rccm_C2.h  calc_rccm_C3.h  calc_rccm_base.h  calc_rccm_typ_3add.h  calc_selective_adder_base.h  calc_selective_adder_typ_a.h  calc_selective_adder_typ_b.h  calc_selective_adder_typ_c.h  config_rccm.h  config_selective_add.h  datatyps.h  debug.h  evaluate_Hardieck_Fiege.h  evaluate_Kolmogorov_Smirnov.h  evaluate_Kullback_Leibler.h  evaluate_base.h  evaluate_count.h  evaluate_equal.h  evaluate_list.h  evaluate_list_stream.h  evaluate_result.h  evaluate_zero.h  helper.h  permutator.h  rccm.h  rccm_3add.h  rccm_base.h  search_space_plan.h  selective_add.h  selective_adder_base.h  selective_adder_typ_a.h  selective_adder_typ_b.h  types.h
version-2/src/: base_obj.cpp  calc_rccm_1add.cpp  calc_rccm_C1.cpp  calc_rccm_C2.cpp  calc_rccm_C3.cpp  calc_rccm_base.cpp  calc_rccm_typ_3add.cpp  calc_selective_adder_base.cpp  calc_selective_adder_typ_a.cpp  calc_selective_adder_typ_b.cpp  calc_selective_adder_typ_c.cpp  config_rccm.cpp  config_selective_add.cpp  debug.cpp  evaluate_Hardieck_Fiege.cpp  evaluate_Kolmogorov_Smirnov.cpp  evaluate_Kullback_Leibler.cpp  evaluate_base.cpp  evaluate_count.cpp  evaluate_equal.cpp  evaluate_list.cpp  evaluate_list_stream.cpp  evaluate_result.cpp  evaluate_zero.cpp  helper.cpp  main.cpp  permutator.cpp  rccm.cpp  rccm_3add.cpp  rccm_base.cpp  search_space_plan.cpp  selective_add.cpp  selective_adder_base.cpp  selective_adder_typ_a.cpp  selective_adder_typ_b.cpp
